...
    var body: some View {
        ScrollView {
            VStack(spacing: 20) {
                // Displaying Stock Quote
                if let quote = financialViewModel.quote {
                    QuoteCard(quote: quote)
                        .accessibilityIdentifier("stockSymbolLabel")
                }
                
                // Displaying Company Overview
                if let overview = financialViewModel.companyOverview {
                    CompanyOverviewCard(overview: overview)
                }
...
                }
                .padding()
                .background(Color.background)
                .cornerRadius(10)
                .shadow(radius: 5)
                .padding([.horizontal, .bottom])
                .accessibilityIdentifier("FinancialDetailView")

            }
            .navigationTitle("Financial Details")
            .onAppear {
                financialViewModel.loadDCFValue()
            }
...
